[gd_scene load_steps=17 format=3 uid="uid://jqirj776gcme"]

[ext_resource type="Script" uid="uid://b03barg524hyx" path="res://resource/ui/menu/save_load_menu.gd" id="1_pajdi"]
[ext_resource type="Texture2D" uid="uid://d0tkwo2kqoupu" path="res://assets/ui/ui.png" id="2_hw6v8"]
[ext_resource type="PackedScene" uid="uid://d08dl5730uq5o" path="res://resource/ui/widgets/container/w_save_slots.tscn" id="3_vbwg1"]
[ext_resource type="Texture2D" uid="uid://c2rls50un2mhl" path="res://themes/wood/graphics/middleBtnNormal.png" id="8_n7wug"]
[ext_resource type="Texture2D" uid="uid://45y01nouliix" path="res://themes/wood/graphics/middleBtnPressed.png" id="9_jdq1c"]
[ext_resource type="Texture2D" uid="uid://b0bp2mykkojx3" path="res://themes/wood/graphics/middleBtnOver.png" id="10_154oc"]
[ext_resource type="Texture2D" uid="uid://8obnq3j46gym" path="res://themes/wood/graphics/middleBtnDisabled.png" id="11_745lb"]
[ext_resource type="Script" uid="uid://drmhc3abbe7ht" path="res://resource/components/ui/buttons/button_middle.gd" id="12_7f2r4"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_0inov"]
texture = ExtResource("8_n7wug")
texture_margin_left = 30.0
texture_margin_top = 30.0
texture_margin_right = 30.0
texture_margin_bottom = 30.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_i18ci"]
texture = ExtResource("9_jdq1c")
texture_margin_left = 30.0
texture_margin_top = 30.0
texture_margin_right = 30.0
texture_margin_bottom = 30.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_qm01m"]
texture = ExtResource("10_154oc")
texture_margin_left = 30.0
texture_margin_top = 30.0
texture_margin_right = 30.0
texture_margin_bottom = 30.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_js667"]
texture = ExtResource("11_745lb")
texture_margin_left = 30.0
texture_margin_top = 30.0
texture_margin_right = 30.0
texture_margin_bottom = 30.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vbwg1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_apu4e"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_n82jd"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nml8l"]

[node name="SaveLoadMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
script = ExtResource("1_pajdi")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.705882)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -45.0
offset_right = 250.0
offset_bottom = 45.0
grow_horizontal = 2
grow_vertical = 2

[node name="NinePatchRect" type="NinePatchRect" parent="MarginContainer"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
texture = ExtResource("2_hw6v8")
region_rect = Rect2(9, 301, 481, 157)
patch_margin_left = 20
patch_margin_top = 60
patch_margin_right = 20
patch_margin_bottom = 30

[node name="LabelMargin" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/margin_top = 12

[node name="TipsLabel" type="Label" parent="MarginContainer/LabelMargin"]
layout_mode = 2
size_flags_vertical = 0
text = "请选择存档"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 28

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/MarginContainer"]
custom_minimum_size = Vector2(0, 500)
layout_mode = 2
horizontal_scroll_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 0
theme_override_constants/margin_right = 8

[node name="SaveList" type="VBoxContainer" parent="MarginContainer/MarginContainer/ScrollContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="WSaveSlots" parent="MarginContainer/MarginContainer/ScrollContainer/MarginContainer/SaveList" instance=ExtResource("3_vbwg1")]
layout_mode = 2

[node name="BottomMargin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -125.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="BottomMargin"]
layout_mode = 2
size_flags_vertical = 8
alignment = 1

[node name="BackMargin" type="MarginContainer" parent="BottomMargin/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20

[node name="BtnBack" type="Button" parent="BottomMargin/HBoxContainer/BackMargin"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
tooltip_text = "快捷键 [b][color=white]ESC[/color][/b] "
theme_override_styles/normal = SubResource("StyleBoxTexture_0inov")
theme_override_styles/pressed = SubResource("StyleBoxTexture_i18ci")
theme_override_styles/hover = SubResource("StyleBoxTexture_qm01m")
theme_override_styles/disabled = SubResource("StyleBoxTexture_js667")
theme_override_styles/focus = SubResource("StyleBoxEmpty_vbwg1")
text = "返  回"
script = ExtResource("12_7f2r4")
metadata/_custom_type_script = "uid://drmhc3abbe7ht"

[node name="HomeMargin" type="MarginContainer" parent="BottomMargin/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20

[node name="BtnHome" type="Button" parent="BottomMargin/HBoxContainer/HomeMargin"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
tooltip_text = "快捷键 [b][color=white]Q[/color][/b] "
theme_override_styles/normal = SubResource("StyleBoxTexture_0inov")
theme_override_styles/pressed = SubResource("StyleBoxTexture_i18ci")
theme_override_styles/hover = SubResource("StyleBoxTexture_qm01m")
theme_override_styles/disabled = SubResource("StyleBoxTexture_js667")
theme_override_styles/focus = SubResource("StyleBoxEmpty_apu4e")
text = "主菜单"
script = ExtResource("12_7f2r4")
metadata/_custom_type_script = "uid://drmhc3abbe7ht"

[node name="LoadMargin" type="MarginContainer" parent="BottomMargin/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20

[node name="BtnLoad" type="Button" parent="BottomMargin/HBoxContainer/LoadMargin"]
custom_minimum_size = Vector2(132, 0)
layout_mode = 2
tooltip_text = "快捷键 [b][color=white]L[/color][/b] "
theme_override_styles/normal = SubResource("StyleBoxTexture_0inov")
theme_override_styles/pressed = SubResource("StyleBoxTexture_i18ci")
theme_override_styles/hover = SubResource("StyleBoxTexture_qm01m")
theme_override_styles/disabled = SubResource("StyleBoxTexture_js667")
theme_override_styles/focus = SubResource("StyleBoxEmpty_n82jd")
text = "加载"
script = ExtResource("12_7f2r4")
metadata/_custom_type_script = "uid://drmhc3abbe7ht"

[node name="SaveMargin" type="MarginContainer" parent="BottomMargin/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20

[node name="BtnSave" type="Button" parent="BottomMargin/HBoxContainer/SaveMargin"]
custom_minimum_size = Vector2(132, 0)
layout_mode = 2
tooltip_text = "快捷键 [b][color=white]S[/color][/b] "
theme_override_styles/normal = SubResource("StyleBoxTexture_0inov")
theme_override_styles/pressed = SubResource("StyleBoxTexture_i18ci")
theme_override_styles/hover = SubResource("StyleBoxTexture_qm01m")
theme_override_styles/disabled = SubResource("StyleBoxTexture_js667")
theme_override_styles/focus = SubResource("StyleBoxEmpty_nml8l")
text = "保存"
script = ExtResource("12_7f2r4")
metadata/_custom_type_script = "uid://drmhc3abbe7ht"

[connection signal="pressed" from="BottomMargin/HBoxContainer/BackMargin/BtnBack" to="." method="_on_btn_back_pressed"]
[connection signal="pressed" from="BottomMargin/HBoxContainer/HomeMargin/BtnHome" to="." method="_on_btn_home_pressed"]
[connection signal="pressed" from="BottomMargin/HBoxContainer/LoadMargin/BtnLoad" to="." method="_on_btn_load_pressed"]
[connection signal="pressed" from="BottomMargin/HBoxContainer/SaveMargin/BtnSave" to="." method="_on_btn_save_pressed"]
